added some templates

--- a/framework7.angular.v2/templates/list/list-item.html
+++ b/framework7.angular.v2/templates/list/list-item.html
@@ -1,10 +1,12 @@
+
 <li>
-              <a href="accordion.html" class="item-link">
-                <div class="item-content">
-                  <div class="item-media"><i class="icon icon-f7"></i></div>
-                  <div class="item-inner">
-                    <div class="item-title">Accordion</div>
-                  </div>
-                </div>
-              </a>
-            </li>
+
+	<a href="{{item.url}}.html" class="item-link">
+		<div class="item-content">
+			<div class="item-media"><i class="icon icon-f7"></i></div>
+			<div class="item-inner">
+				<div class="item-title">{{item.label}}</div>
+			</div>
+		</div>
+	</a>
+</li>
