--- a/framework7.angular.v2/templates/views/main/main-view.html
+++ b/framework7.angular.v2/templates/views/main/main-view.html
@@ -1,4 +1,4 @@
-<div class="view view-main">
+<div class="view view-main" define-view="mainView">
   <div class="pages navbar-fixed">
     <div data-page="index" class="page">
       
@@ -11,10 +11,10 @@
         <div class="list-block">
           <ul>
 
-            <load-template url="templates/list/list-item.html"></load-template>
+            <load-template url="templates/list/list-item.html"  item="item" ng-repeat="item in list" ></load-template>
 
             
-            <li>
+           <!--  <li>
               <a href="calendar.html" class="item-link">
                 <div class="item-content">
                   <div class="item-media"><i class="icon icon-f7"></i></div>
@@ -333,7 +333,7 @@
                   </div>
                 </div>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
