fixed page init binding issue. And added automcomplete directive

--- a/src/app/autocomplete/autocomplete.html
+++ b/src/app/autocomplete/autocomplete.html
@@ -19,7 +19,12 @@
           <div class="item-inner">
             <div class="item-title floating-label">Favorite Fruit</div>
             <div class="item-input">
-              <input type="text" id="autocomplete-dropdown"/>
+              <input type="text"
+                fa-autocomplete
+                fa-data="fruits"
+                fa-placeholder="This is the placeholder"
+                fa-dropdown-open="true"
+                fa-open-in="dropdown" />
             </div>
           </div>
         </li>
