--- a/src/app/forms/forms.html
+++ b/src/app/forms/forms.html
@@ -33,7 +33,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/formSelects" class="item-link">
+          <a href="#/app/formSelects" class="item-link red">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
