--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -89,7 +89,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/floatingButton" class="item-link red">
+          <a href="#/app/floatingButton" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -132,7 +132,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/lazyLoading" class="item-link red">
+          <a href="#/app/lazyLoading" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -182,7 +182,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/modals" class="item-link red">
+          <a href="#/app/modals" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -205,7 +205,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/notifications" class="item-link red">
+          <a href="#/app/notifications" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -215,7 +215,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/photoBrowser" class="item-link">
+          <a href="#/app/photoBrowser" class="item-link red">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -225,7 +225,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/picker" class="item-link red">
+          <a href="#/app/picker" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -245,7 +245,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/preloader" class="item-link red">
+          <a href="#/app/preloader" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -255,7 +255,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/progress" class="item-link red">
+          <a href="#/app/progress" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -268,7 +268,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/pullToRefresh" class="item-link red">
+          <a href="#/app/pullToRefresh" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -278,7 +278,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/search" class="item-link red">
+          <a href="#/app/search" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -318,7 +318,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/slider" class="item-link red">
+          <a href="#/app/slider" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -341,7 +341,7 @@
           </a>
         </li>
         <li>
-          <a href="#/app/virtualList" class="item-link red">
+          <a href="#/app/virtualList" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
@@ -355,7 +355,7 @@
     <div class="list-block">
       <ul>
         <li>
-          <a href="#/app/colorTheme" class="item-link red">
+          <a href="#/app/colorTheme" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
