added framework7 provider method for instantiation

--- a/src/app/calendar/calendar.html
+++ b/src/app/calendar/calendar.html
@@ -19,7 +19,7 @@
           <div class="item-content">
             <div class="item-inner">
               <div class="item-input">
-                <input type="text" placeholder="Your birth date" readonly="readonly" id="ks-calendar-default"/>
+                <input type="text" placeholder="Your birth date" readonly="readonly" fa-calendar="simpleCalendar"/>
               </div>
             </div>
           </div>
